--- a/index.html
+++ b/index.html
@@ -3,10 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="js/app.js" defer></script>
+    <title>Accueil Memory</title>
+    <style src="css/style.css" type="style"></style>
+    <script type="module" src="js/app.js" defer></script>
 </head>
 <body>
-    
+    <h1>Memory Accueil</h1>
+    <nav>
+       <div id="navbar-1">
+            <a href="index.html">Accueil</a>
+            <a href="register.html">S'inscrire</a>
+            <a href="connect.html">Se connecter</a>
+            <a href="profil.html">Profil</a>
+            <a href="play.html">Jouer</a>
+       </div>
+    </nav>
+    <div>
+        <ul>
+            <li>Retournez deux cartes. Si les images sont identiques, le jeu laisse les cartes visibles.</li>
+            <li>Si les images sont différentes, les cartes se retournent faces cachées là où elles étaient.</li>
+            <li>La partie est terminée lorsque toutes les cartes ont été assemblées par paires.</li>
+        </ul>
+    </div>
+    <img src="resources/memory-legume/memory_detail.png" alt="Images du memory legume">
+    <div>
+        <p>Si vous voulez vous souvenir de votre score, inscrivez-vous via le formulaire.</p>
+        <p>Le jeu garde les 5 meilleurs scores</p>
+        <p>Si vous voulez remancer une partie cliquez sur la barre d'espace</p>
+    </div>
 </body>
 </html>
