--- a/play.html
+++ b/play.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game page</title>
+    <script type="module" src="js/app.js" defer></script>
 </head>
 <body>
     <h1>Memory Jeu</h1>
@@ -65,8 +66,12 @@
         <p>Tentez de gagner avec le moins d'essais possible.</p>
         <p>Appuyez sur la barre d'espace pour relancer le jeu.</p>
         <p>Nombre de coups : 0</p>
-        <div name="board" id="board">
-            
+        <div name="board" id="board"></div>
+        <div>
+            <div>Bien joué ! Veux-tu jouer à nouveau ?</div>
+            <div id="cover">
+                <button>Play Again</button>
+            </div>
         </div>
     </div>
 </body>
