Add css for the index page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1 class="navbar">Memory Accueil</h1>
+    <h1 class="h1">Memory Accueil</h1>
     <nav>
        <div id="navbar-1" class="navbar">
             <a href="index.html">Accueil</a>
@@ -28,8 +28,8 @@
     <img src="resources/memory-legume/memory_detail.png" alt="memory legume">
     <div id="accueil-bottom">
         <p>Si vous voulez vous souvenir de votre score, inscrivez-vous via le formulaire.</p>
-        <p>Le jeu garde les <strong>5 meilleurs</strong> scores</p>
-        <p>Si vous voulez remancer une partie cliquez sur la <strong>barre d'espace</strong></p>
+        <p>Le jeu garde les <b>5 meilleurs</b> scores</p>
+        <p>Si vous voulez remancer une partie cliquez sur la <strong> barre d'espace</strong></p>
     </div>
 </body>
 </html>
