Add css for the registration page

--- a/register.html
+++ b/register.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Registration page</title>
 </head>
 <body>
-    <h1>Memory Inscription</h1>
+    <h1 class="h1">Memory Inscription</h1>
     <nav>
-        <div id="navbar-2">
+        <div id="navbar-2" class="navbar">
             <a href="index.html">Accueil</a>
             <a href="register.html">S'inscrire</a>
             <a href="connect.html">Se connecter</a>
@@ -17,7 +18,7 @@
         </div>
     </nav>
     <div>
-        <form>
+        <form id="register-form">
             <label for="text">Nom d'utilisateur</label>
             <input type="text" name="text" id="text">
             <label for="email" >Email</label>
