Add css on play, profil and connect

--- a/connect.html
+++ b/connect.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Connection page</title>
 </head>
 <body>
-    <h1>Memory Connection</h1>
+    <h1 class="h1">Memory Connection</h1>
     <nav>
-        <div id="navbar-3">
+        <div id="navbar-3" class="navbar">
             <a href="index.html">Accueil</a>
             <a href="register.html">S'inscrire</a>
             <a href="connect.html">Se connecter</a>
@@ -16,7 +17,7 @@
             <a href="play.html">Jouer</a>
         </div>
     </nav>
-    <form action="">
+    <form class="register-form">
         <label for="email">Entrez votre email</label>
         <input type="email" name="email" id="email">
         <label for="email">Mot de passe</label>
