--- a/profil.html
+++ b/profil.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>User profile page</title>
 </head>
 <body>
-    <h1>Memory Profil</h1>
+    <h1 class="h1">Memory Profil</h1>
     <nav>
-        <div id="navbar-4">
+        <div id="navbar-4" class="navbar">
             <a href="index.html">Accueil</a>
             <a href="register.html">S'inscrire</a>
             <a href="connect.html">Se connecter</a>
