Add function to check game status ans to create an html img

--- a/play.html
+++ b/play.html
@@ -36,8 +36,9 @@
             <p>Nombre de coups : 0</p>
         </div>
 
-        <div name="board" id="board"></div>
-            <p>blbl</p>
+        <div name="board" id="board">
+            
+        </div>
         <div class="bottom-play" id="cover">
             <div>Bien joué ! Veux-tu jouer à nouveau ?</div>
             <div>
