Change js + play page

--- a/play.html
+++ b/play.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game page</title>
-    <link rel="stylesheet" href="css/style.css">
-    <script type="module" src="js/app.js" defer></script>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Memory Game</title>
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <script src="/js/script.js" defer></script>
 </head>
+
 <body>
     <h1 class="h1">Memory Jeu</h1>
     <nav>
@@ -36,15 +39,18 @@
             <p>Nombre de coups : 0</p>
         </div>
 
-        <div name="board" id="board">
+        <section class="memory-game" id ="memory-game">
+            
+        </section>
             
         </div>
         <div class="bottom-play" id="cover">
             <div>Bien joué ! Veux-tu jouer à nouveau ?</div>
             <div>
-                <button>Play Again</button>
+                <button id="restart">Play Again</button>
             </div>
         </div>
     </div>
 </body>
+
 </html>
