--- a/play.html
+++ b/play.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Memory Game</title>
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
-    <script src="/js/script.js" defer></script>
+    <link rel="stylesheet" type="text/css" href="/memory-js/css/style.css">
+    <script src="/memory-js/js/script.js" defer></script>
 </head>
 
 <body>
