--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/memory-js/css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Registration page</title>
 </head>
 <body>
