Add display score

--- a/play.html
+++ b/play.html
@@ -36,7 +36,7 @@
         <div class="paragraphe">
             <p>Tentez de gagner avec le moins d'essais possible.</p>
             <p>Appuyez sur la barre d'espace pour relancer le jeu.</p>
-            <p>Nombre de coups : 0</p>
+            <p id="displayError"></p>
         </div>
 
         <section class="memory-game" id ="memory-game">
